@@ -1,27 +1,20 @@
 package org.ihtsdo.buildcloud.core.service.identifier.client;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.concurrent.atomic.AtomicInteger;
-
 import org.apache.http.HttpStatus;
 import org.ihtsdo.otf.rest.client.RestClientException;
 import org.ihtsdo.otf.rest.client.resty.RestyHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import us.monoid.json.JSONArray;
 import us.monoid.json.JSONException;
 import us.monoid.json.JSONObject;
 import us.monoid.web.JSONResource;
+
+import java.io.IOException;
+import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 
 @Service
 public class IdServiceRestClientImpl implements IdServiceRestClient {
@@ -69,7 +62,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 	private int batchSize;
 	
 	public IdServiceRestClientImpl(@Value("${cis.url}") final String idServiceUrl,
-			@Value("${cis.userName}") final String username,
+			@Value("${cis.username}") final String username,
 			@Value("${cis.password}") final String password) {
 		this.idServiceUrl = idServiceUrl;
 		urlHelper = new IdServiceRestUrlHelper(idServiceUrl);
@@ -195,7 +188,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 					if ( response != null && HttpStatus.SC_OK == (response.getHTTPStatus()) ){
 						JSONArray items = response.array();
 						for (int i =0; i < items.length();i++) {
-							result.put(new Long((String)items.getJSONObject(i).get(SCTID)), (String)items.getJSONObject(i).get(STATUS));
+							result.put(Long.valueOf((String)items.getJSONObject(i).get(SCTID)), (String)items.getJSONObject(i).get(STATUS));
 						}
 					} else {
 						throw new RestClientException(getFailureMessage(response));
@@ -234,7 +227,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 					requestData.put(COMMENT, comment);
 					JSONResource response = resty.json(urlHelper.getSctIdGenerateUrl(token), RestyHelper.content((requestData),APPLICATION_JSON));
 					if ( response != null && HttpStatus.SC_OK == (response.getHTTPStatus()) ){
-						 result = new Long((String)response.get(SCTID));
+						 result = Long.valueOf((String)response.get(SCTID));
 					} else {
 						throw new RestClientException(getFailureMessage(response));
 					}
@@ -291,7 +284,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 						if (BULK_JOB_STATUS.COMPLETED_WITH_SUCCESS.getCode() == waitForCompleteStatus(jobId, getTimeOutInSeconds())) {
 							JSONArray items = resty.json(urlHelper.getBulkJobResultUrl(jobId, token)).array();
 							for (int i =0;i < items.length();i++) {
-								result.put(UUID.fromString((String)items.getJSONObject(i).get(SYSTEM_ID)), new Long((String)items.getJSONObject(i).get(SCTID)));
+								result.put(UUID.fromString((String)items.getJSONObject(i).get(SYSTEM_ID)), Long.valueOf((String)items.getJSONObject(i).get(SCTID)));
 							}
 						}
 					} else {
@@ -613,7 +606,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 					if ( response != null && HttpStatus.SC_OK == (response.getHTTPStatus()) ){
 						JSONArray items = response.array();
 						for (int i =0;i < items.length();i++) {
-							result.put(new Long((String)items.getJSONObject(i).get(SCTID)), items.getJSONObject(i));
+							result.put(Long.valueOf((String)items.getJSONObject(i).get(SCTID)), items.getJSONObject(i));
 						}
 					} else {
 						String errorMsg = (response != null) ? "http status code is:" + response.getHTTPStatus() : "No response received.";
@@ -746,7 +739,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 				if (BULK_JOB_STATUS.COMPLETED_WITH_SUCCESS.getCode() == waitForCompleteStatus(jobId, getTimeOutInSeconds())) {
 					JSONArray items = resty.json(urlHelper.getBulkJobResultUrl(jobId, token)).array();
 					for (int i =0;i < items.length();i++) {
-						result.add(new Long((String)items.getJSONObject(i).get(SCTID)));
+						result.add(Long.valueOf((String)items.getJSONObject(i).get(SCTID)));
 					}
 				}
 			} else {
@@ -784,7 +777,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 					JSONArray items = resty.json(urlHelper.getBulkJobResultUrl(jobId, token)).array();
 					for (int i =0;i < items.length();i++) {
 						
-						result.add(new Long((String)items.getJSONObject(i).get(SCTID)));
+						result.add(Long.valueOf((String)items.getJSONObject(i).get(SCTID)));
 					}
 				}
 			} else {
@@ -822,7 +815,7 @@ public class IdServiceRestClientImpl implements IdServiceRestClient {
 				if (BULK_JOB_STATUS.COMPLETED_WITH_SUCCESS.getCode() == waitForCompleteStatus(jobId, getTimeOutInSeconds())) {
 					JSONArray items = resty.json(urlHelper.getBulkJobResultUrl(jobId, token)).array();
 					for (int i =0;i < items.length();i++) {
-						result.add(new Long((String)items.getJSONObject(i).get(SCTID)));
+						result.add(Long.valueOf((String)items.getJSONObject(i).get(SCTID)));
 					}
 				}
 			} else {
